# anki_generator

./: .gitignore  ETAPAS_PROJETO.md  Makefile  README.md  config.example.env  generator_v2.py  main.py  pyproject.toml  requirements.txt  setup_env.sh  test_mongodb_integration.py  test_simple.py
domain/entities/: card.py  deck.py  generation_session.py
domain/repositories/: icard_repository.py  ideck_repository.py
domain/services/: card_quality_service.py
domain/value_objects/: audio_path.py  word.py
infrastructure/repositories/: __init__.py  generation_session_repository.py
legacy/: docker-compose.yml
legacy/config/: anki.py
legacy/docker/mongo-init/: 01-init-database.js
legacy/domain/: __init__.py  models.py
legacy/domain/entities/: __init__.py  card.py
legacy/domain/repositories/: __init__.py  igeneration_session_repository.py
legacy/domain/services/: __init__.py  duplicate_detection_service.py
legacy/domain/value_objects/: __init__.py  example.py  translation.py
legacy/infrastructure/database/: mongodb_connection.py  schemas.py
legacy/infrastructure/repositories/: card_repository.py  deck_repository.py
legacy/shared/config/: database.py
presentation/api/: exceptions.py  main.py
presentation/api/routes/: health.py
services/anki_deck_generator/: audio.py  card_model.py  deck.py  note.py
services/generator/: audio.py  deck.py
shared/config/: __init__.py  settings.py
shared/exceptions/: exceptions.py
